--- a/run_openwebui_colab.ipynb
+++ b/run_openwebui_colab.ipynb
@@ -354,6 +354,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Finalizando\n",
+        "\n",
+        "\n",
+        "Ao final verifique na sua conta do ngrok qual o endpoint que foi exposto pelo google colab."
+      ],
+      "metadata": {
+        "id": "Mp1rfgAx7lYc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Conclusão e Considerações Finais\n",
         "\n",
         "Este script oferece uma solução prática para rodar o openweb-ui e testar aplicações de IA diretamente no Google Colab, integrando com ferramentas como ngrok e ollama. Ele automatiza a configuração do ambiente, garantindo que todas as dependências sejam instaladas e que os serviços necessários sejam iniciados corretamente.\n",
