--- a/run_openwebui_colab.ipynb
+++ b/run_openwebui_colab.ipynb
@@ -34,6 +34,8 @@
         "# Tutorial: Execução do OpenWebUI no Google Colab\n",
         "\n",
         "Este notebook foi preparado para demonstrar, passo a passo, como configurar e executar o OpenWebUI no ambiente do Google Colab. Em cada etapa, você encontrará uma célula de texto que explica detalhadamente o que está sendo feito e por que cada comando é importante para a execução da aplicação.\n",
+        "\n",
+        "A ideia principal é que você possa testar modelos de IA recentes vindos de fontes como o Ollama e o Hugging Face\n",
         "      "
       ],
       "metadata": {
